--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve & ngtw watch",
+    "start": "ng serve --port 4500 --open & ngtw watch",
     "build": "ngtw build --purge && ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
